--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
-<h1>Classifieds for <%= @category.name %></h1>
-
+<h1><%= @category.name %></h1>
+<h2>Listings under this category</h2>
 <ul>
   <% @category.classifieds.each do |classified| %>
-    <li><%= link_to classified.title, classified_path(classified), class: 'classified_link' %></li>
+    <li><%= link_to "#{truncate(classified.title)} - #{classified.price}", classified_path(classified) %></li>
   <% end %>
 </ul>
