--- a/app/views/classifieds/show.html.erb
+++ b/app/views/classifieds/show.html.erb
@@ -1,4 +1,5 @@
-<h1><%= @classified.title %></h1>
-<h3><%= @classified.category.name %></h3>
-<div><%= "$#{@classified.price}" %></div>
-<p><%= @classified.description %></p>
+<h1><%= @classified.title %> - <%= number_to_currency @classified.price %></h1>
+<div>
+  <%= @classified.description %>
+</div>
+<%= link_to @classified.category.name, @classified.category %>
