--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,19 @@
-<h1>Welcome!</h1>
-<h2>Which Category would you like to look through?</h2>
-
-<ul>
+<h1>Stuff Finder!</h1>
+<p>Your place for finding stuff you want and dumping stuff you don't</p>
+<%= link_to "Create a new classified!", new_classified_path %>
+<section>
   <% @categories.each do |category| %>
-    <li><%= link_to category.name, category_path(category) %></li>
+    <article>
+      <section>
+        <h3><%= link_to category.name, category %></h3>
+        <header>
+          <% category.recent_classifieds.each do |classified| %>
+          </header>
+          <article>
+            <%= link_to "#{truncate(classified.title)} - #{classified.price}", classified %>
+          </article>
+        <% end %>
+      </section>
+    </article>
   <% end %>
-</ul>
+</section>
