--- a/app/views/classifieds/new.html.erb
+++ b/app/views/classifieds/new.html.erb
@@ -1,23 +1,25 @@
 <h1>Add a classified</h1>
+<div class="container">
 <%= form_for @classified do |f| %>
-  <div>
+  <div class="form-group">
     <%= label_tag :category %>
-    <%= text_field_tag :category %>
+    <%= text_field_tag :category, nil, class: 'form-control' %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control' %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: 'form-control' %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :price %>
-    <%= f.number_field :price, :size => 5, :value => 0, :step => 0.01, :min => 0 %>
+    <%= f.number_field :price, :size => 5, :value => 0, :step => 0.01, :min => 0, class: 'form-control' %>
   </div>
   <br>
   <div>
-    <%= f.submit %>
+    <%= f.submit 'Create Classified', class: 'btn btn-primary btn-lg' %>
   </div>
 <% end %>
+</div>
