yay local paperclip

--- a/app/views/classifieds/show.html.erb
+++ b/app/views/classifieds/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @classified.title %> - <%= number_to_currency @classified.price %></h1>
+<img src='<%= @classified.image.url %>'>
 <div>
   <%= @classified.description %>
 </div>
