--- a/app/views/classifieds/new.html.erb
+++ b/app/views/classifieds/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Add a classified</h1>
 <div class="container">
-<%= form_for @classified do |f| %>
+<%= form_for @classified, html: {multipart: true} do |f| %>
   <div class="form-group">
     <%= label_tag :category %>
     <%= text_field_tag :category, nil, class: 'form-control' %>
@@ -16,6 +16,10 @@
   <div class="form-group">
     <%= f.label :price %>
     <%= f.number_field :price, :size => 5, :value => 0, :step => 0.01, :min => 0, class: 'form-control' %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: 'form-control' %>
   </div>
   <br>
   <div>
